# VECTOR-DB

./: .gitignore  Makefile  globals.h  test.py
file/: .gitignore  Makefile  file  file.c  file.h  file.txt  ktmath.c  ktmath.h  test.sh
network/: Cargo.toml  build.rs
server/: .gitignore  Cargo.toml  build.rs
server/src/: bindings.rs  cstorage.rs  main.rs  storage-bindings.rs  vecstorage.rs
storage/: Makefile  file.c  file.h  ktmath.c  ktmath.h  main.c
ui/: package-lock.json  package.json
ui/src/: App.vue
vectrix-ui/: README.md  package-lock.json  package.json
vectrix-ui/src/: App.vue
vectrix-ui/src/components/: HelloWorld.vue
