[package]
name = "vector-db-server"
version = "0.1.0"
authors = ["Kyle Kloberdanz <kyle.g.kloberdanz@gmail.com>"]
edition = "2018"
links = "vectordb-storage"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
cc = { version = "1.0.58", features = ["parallel"] }
pkg-config = "0.3.18"
