[package]
name = "vectrix"
version = "0.1.0"
authors = ["Kyle Kloberdanz <kyle.g.kloberdanz@gmail.com>"]
edition = "2018"
links = "vectrix"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
rocket = "0.4.5"
lazy_static = "1.4.0"
ctrlc = "3.1.6"
rocket_cors = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.57"

[build-dependencies]
cc = { version = "1.0.58", features = ["parallel"] }
pkg-config = "0.3.18"
